syntax = "proto3";

option csharp_namespace = "ExpertPaymentService";

package expert;

service ExpertService {
    rpc GetAppointments(GetAppointmentsRequest) returns (GetAppointmentsResponse);
    rpc UpdateAppointment(GetAppointmentsRequest) returns (UpdateResponse);
    rpc UpdateExpertAvailability(GetAppointmentsRequest) returns (UpdateResponse);
}   

message GetAppointmentsRequest {
    string appointmentId = 1;
    int32 status = 2;
}

message GetAppointmentsResponse {
    int32 amount = 1;
    string expertName = 2;
    string expertEmail = 3;
    string appointmentDate = 4;
    string startTime = 5;
    string endTime = 6;
    string userId = 7;
    string expertId = 8;
}

message UpdateResponse {
    bool isSucess = 1;
}